--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        cache-dependency-path: tauri-app/package-lock.json
+        cache-dependency-path: package-lock.json
     
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@stable
